force-app/main/default/objects/FlowMigration__c/FlowMigration__c.object-meta.xml
<CustomObject>
    <label>Flow Migration</label>
    <pluralLabel>Flow Migrations</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Migration ID</label>
        <displayFormat>FM-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Records of Flow ↔ Apex conversion attempts and their AI-generated results.</description>
</CustomObject>