force-app/main/default/objects/FlowMigration__c/fields/Deploy_Status__c.field-meta.xml
<CustomField>
    <fullName>Deploy_Status__c</fullName>
    <label>Deploy Status</label>
    <description>Tracks whether the generated handler was automatically deployed and registered. Values: Deployed, Deploy_Failed, Not_Attempted.</description>
    <length>20</length>
    <type>Text</type>
</CustomField>