force-app/main/default/objects/FlowMigration__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <description>The direction of this migration.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Flow_To_Apex</fullName><default>true</default><label>Flow to Apex</label></value>
            <value><fullName>Apex_To_Flow</fullName><default>false</default><label>Apex to Flow</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>