force-app/main/default/objects/FlowMigration__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <description>Error details or model refusal reason when Status = Failed.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>