force-app/main/default/objects/FlowMigration__c/fields/Generated_Apex__c.field-meta.xml
<CustomField>
    <fullName>Generated_Apex__c</fullName>
    <label>Generated Apex</label>
    <description>Apex Trigger and Handler code produced by Einstein for the source Flow.</description>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>