force-app/main/default/objects/FlowMigration__c/fields/Generated_Flow_XML__c.field-meta.xml
<CustomField>
    <fullName>Generated_Flow_XML__c</fullName>
    <label>Generated Flow XML</label>
    <description>Flow XML produced by Einstein for an Apex→Flow migration.</description>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>