force-app/main/default/objects/FlowMigration__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <description>The SObject the trigger / Flow targets (Account, Contact, Lead, ...). Populated by the AI when it can detect it.</description>
    <type>Text</type>
    <length>80</length>
</CustomField>