force-app/main/default/objects/FlowMigration__c/fields/Source_Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Flow_Name__c</fullName>
    <label>Source Name</label>
    <description>The Flow API name (Flow→Apex) or the Apex class name (Apex→Flow) that was migrated.</description>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>